# equipartition

./: .gitignore  README.md  pyproject.toml  setup.py
demos/: ASASSN19bt_fit_params.json  Cendes2021table2.txt  CendesTable2.py  Cendes_et_al_2021.xlsx  ChristyTable4.py  Fig9Matsumo&Piran2023.py  MP23betaeqNdata.txt  MP23comparison.ipynb  MP23energyData.txt  MP23gammaBetaData.txt  MP23reqData.txt  apjad675bt3_ascii.txt  apjad675bt4_ChatGPTprocessed_geom1.txt  apjad675bt4_ChatGPTprocessed_geom2.txt  apjad675bt4_ChatGPTprocessed_geom3.txt  bh_masses_host.txt  constraintfigure.py  demo.ipynb  lit_sed_params.csv  miscobjects.ipynb  recompute-literature-TDEs.ipynb
equipartition/: __init__.py  equipartition.py  offAxisSolutionPickle.npy  onAxisSolutionPickle.npy  solutionTable.py  testSolutionPickle.py  theta.npy  thetac.npy
tests/: equipartitionTester.py
